Fixed the gap

--- a/src/styles/learn.scss
+++ b/src/styles/learn.scss
@@ -177,7 +177,7 @@
     overflow: hidden;
     position: fixed;
     right: 0;
-    top: auto;
+    top: 95px;
 
     &.side-nav--open {
       max-height: calc(100vh - var(--nav-height));
